# pg-vault

./: CHANGELOG.md  CLAUDE.md  CODESIGNING.md  Cargo.toml  README.md  install.sh  package-lock.json  package.json
.changeset/: oxsbayvg.md
.github/workflows/: release.yml
src/: aws.rs  cli.rs  config.rs  credentials.rs  main.rs
src/tui/: app.rs  mod.rs  ui.rs
src/tui/widgets/: actions.rs  add_form.rs  connection_list.rs  mod.rs  profile_selector.rs
