[package]
name = "pg-vault"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
keyring = { version = "3.0", features = ["apple-native"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = "0.7"
colored = "2.0"
anyhow = "1.0"
dirs = "5.0"
rpassword = "7.0"
tabled = "0.15"
urlencoding = "2.1"
